assets/scss/custom.scss
/*
 *	CUSTOM SCSS
 */

@import "compass/css3";
@import "vars";
@import "reset";
@import "responsive";
@import "typography";
@import "navbar";
@import "footer";
@import "sections";
@import "thumbs";
@import "social";
@import "cherry-blossoms";
@import "page-specific";
@import "wp-plugins";

html, body {
    overflow-x: hidden;
}
body {
    padding: 0;
    background-color: #000;
}
article {
    padding-left: 0 !important;
}

code {
    @extend %darkBg;
}
pre, .highlight {
    @extend %darkBg;
}
pre {
    color: #666;
    margin: 30px 0;
}
time {
    color: #999;
}
table {
    border-spacing: 0 !important;
    border-color: transparent !important;
}
a{
    color: $blue;
    &:hover {
        color: lighten($blue, 13%);
    }
}
a:hover {
    text-decoration: none !important;
}
:focus, a:focus {
    outline: -webkit-focus-ring-color auto 0;
}

.row {
    margin-left:    0;
    margin-right:   0;
}
.container {
    @include max_tablet {
        padding: 0 25px 5px;
    }
}
.page-header {
    border: 0;
    margin: 20px 0 0;
    padding-bottom: 0;
    @include max_tablet {
        margin: 10px 0 0;
    }
    h1{
        @include tablet {
            text-align: right;
            margin: 30px 0 0 15px;
        }
    }
    .page-title{
        @include max_tablet{
            margin-bottom: 30px;
        }
    }
}
.single .page-header h1 {
    @include max_tablet {
        text-align: left;
        margin: 10px 0 20px;
    }
}
.hentry {
    margin: 10px;
}
.post {
    margin: 0 0 40px 0;
}
.entry-meta {
    margin-bottom: 20px;
    line-height: 150%;
}
.main-content{
    padding-top: 85px;

    /* @include max_desktop {
        padding-top: 85px;  
    }
    @include max_laptop {
        padding-top: 85px;  
    } */
    @include max_tablet{
        padding-top: 0px;
    }

    > .container {
        padding: 0;
        @include max_tablet{
            background-color: transparent;
            padding: 0 15px;
        }
    }
}

.main-content-inner {
    padding-bottom: 0;
    .col-sm-6 {
        @include max_tablet{
            padding: 0;
        }
    }
}

.home, .blog, .single, .page-id-21 {
    .main-content-inner{
        margin: 15px;
        @include max_tablet{
            margin: 10px; 
        }
    }
}
.content{
    margin-left: 15px;
    margin-right: 15px;
    @include max_tablet {
        margin-left: 0;
        margin-right: 0;
    }
}
.image {
     @if $use_shadows { @extend %boxShadow; }

    img {
        width: 100% !important;
        height: auto !important;
    }

    @include max_laptop {
        width: 100%;
        img {
            width: 100% !important;
        }
    }
}

.search, .error404 {
    padding: 60px;
}

#avatar {
    width:  17px;
    height: 17px;
    margin-top: 1px;
    margin-right: 13px;
}

.col-content {
    padding-left:  0px;
    padding-right: 50px;
    overflow: hidden;

    ul {
        list-style: disc !important;
    }

    @include max_laptop {
        padding-right: 40px;
    }
    @include max_tablet {
        padding-right: 0;
    }
}


//  Font Awesome Icons

.fa-desktop {
    line-height: 21px;
}
.fa-globe {
    line-height: 19px;
}
.fa-responsive {
    margin-right: 5px;
}


//  Sidebar

.sidebar {
    padding: 10px 30px;
    margin-top: 20px;
    background-color: black;

    @include max_laptop {
        padding: 0;
    }

    h3 {
        padding: 0 0 10px;
        margin: 0 !important;
    }
    .nav > li > a {
        padding: 10px 0;
    }
}


//  Modal

.modal {
    top: 10%;
}




/*
 *  Admin Menu 
 */

#adminmenu #menu-posts-design .wp-menu-image:before {
    content: '\f85' !important;
}

